--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "@ampproject/rollup-plugin-closure-compiler": "^0.27.0",
-    "rollup": "^4.18.0"
+    "javascript-obfuscator": "^4.1.0",
+    "rollup": "^4.18.0",
+    "rollup-plugin-obfuscator": "^1.1.0"
   }
 }
