--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "javascript-obfuscator": "^4.1.0",
     "rollup": "^4.18.0",
     "rollup-plugin-obfuscator": "^1.1.0"
+  },
+  "dependencies": {
+    "@ampproject/rollup-plugin-closure-compiler": "^0.27.0"
   }
 }
